[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprite/Objects/LastDoorPtero.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Objects/LastDoor.png" type="Texture" id=2]
[ext_resource path="res://Script/Doors.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.3817, 15.2908 )

[node name="Doors" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 4, 4 )
collision_layer = 16
collision_mask = 2147483652
__meta__ = {
"_edit_group_": true
}

[node name="frenddoor" type="Sprite" parent="Area2D"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 99.124, 0 )
scale = Vector2( 4, 4 )
collision_layer = 16
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="petrodoor" type="Sprite" parent="Area2D2"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
